# storage/api-docs/api-docs.json
@@ -1704,6 +1704,99 @@
                 ]
             }
         },
+        "/api/v1/hito-auditoria/get/occupation": {
+            "get": {
+                "tags": [
+                    "HitoAuditoria"
+                ],
+                "summary": "Get getCensoHitoAuditoria",
+                "description": "Returns censoHitoAuditoria",
+                "operationId": "getCensoHitoAuditoria",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "type": "apikey",
+                        "in": "header",
+                        "name": "X-Authorization",
+                        "X-Authorization": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/hito-auditoria/get/patient/{patientdoc?}/type/{patientdoctype?}/{admNum?}": {
+            "get": {
+                "tags": [
+                    "HitoAuditoria"
+                ],
+                "summary": "getPatientInfoDetail",
+                "description": "getPatientInfoDetail",
+                "operationId": "getPatientInfoDetail",
+                "parameters": [
+                    {
+                        "name": "patientDoc?",
+                        "in": "path",
+                        "description": "Número de Documento - Obligatory",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "patientDoctype?",
+                        "in": "path",
+                        "description": "Tipo de Documento - Obligatory - RC - TI - CC - CE - NIT - MS - PA - PE - AS - SC",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "admNum?",
+                        "in": "path",
+                        "description": "Consecutivo de Ingreso - Obligatory",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "type": "apikey",
+                        "in": "header",
+                        "name": "X-Authorization",
+                        "X-Authorization": []
+                    }
+                ]
+            }
+        },
         "/api/v1/hito/get/occupation-with-real-stay": {
             "get": {
                 "tags": [
@@ -2128,49 +2221,6 @@
                         "name": "bedCode?",
                         "in": "path",
                         "description": "Código de la cama - Obligatory",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                },
-                "security": [
-                    {
-                        "type": "apikey",
-                        "in": "header",
-                        "name": "X-Authorization",
-                        "X-Authorization": []
-                    }
-                ]
-            }
-        },
-        "/api/v1/hito/get/pavilion-beds/turn-delivery/{pavCode?}": {
-            "get": {
-                "tags": [
-                    "Hito"
-                ],
-                "summary": "getBedsOfPavilionByPavName",
-                "description": "Returns getBedsOfPavilionByPavName",
-                "operationId": "getBedsOfPavilionByPavName",
-                "parameters": [
-                    {
-                        "name": "pavCode?",
-                        "in": "path",
-                        "description": "Código del Pabellón - Obligatory",
                         "required": true,
                         "schema": {
                             "type": "string"
@@ -3716,6 +3766,58 @@
                 "summary": "Get getPrioridadCasos",
                 "description": "Returns getPrioridadCasos",
                 "operationId": "getPrioridadCasos",
+                "parameters": [
+                    {
+                        "name": "fechaInicial?",
+                        "in": "path",
+                        "description": "Required",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "fechaFinal?",
+                        "in": "path",
+                        "description": "Required",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "type": "apikey",
+                        "in": "header",
+                        "name": "X-Authorization",
+                        "X-Authorization": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/indicadores/get/halconreportegeneralcasos": {
+            "get": {
+                "tags": [
+                    "Indicadores"
+                ],
+                "summary": "Get getHalconReporteGeneralCasos",
+                "description": "Returns getHalconReporteGeneralCasos",
+                "operationId": "getHalconReporteGeneralCasos",
                 "parameters": [
                     {
                         "name": "fechaInicial?",
